Fix config alignment

--- a/css/general.css
+++ b/css/general.css
@@ -13,11 +13,12 @@
 	.wrap {margin:0 auto; width: 100%;}
 	.config {
 		float: left;
-		width: 18%;
+		width: 17%;
+		margin-left: 10px;
 		margin-right: 10px;
-		padding: 5px;
-		border-right: 1px solid #3c3c3c;
-		border-bottom: 1px solid #3c3c3c;
+		margin-top: 5mm;
+		padding: 7px;
+		border: 1px solid #3c3c3c;
 		background-color: #efefef;
 	}
 
